Part-2/TaskScheduler/backend/services/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: taskscheduler
  labels:
    name: taskscheduler
